# receptionbox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  receptionbox-technical-prd-v0_2-2026-05-03 (1).md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: dev-1083-g2-whisper-hallucination.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: __init__.py  g711.py  manifest.csv  reference_prompt.md
assets/corpus_g711/: g711-0001.txt  g711-0002.txt  g711-0004.txt  g711-0005.txt  g711-0007.txt  g711-0008.txt  g711-0009.txt  g711-0010.txt  g711-0011.txt  g711-0012.txt  g711-0014.txt  g711-0015.txt  g711-0016.txt  g711-0017.txt  (+86 more)
assets/render_env/: pyproject.toml  render_corpus.py  render_g711_subset.py  render_g711_transcripts.py  render_hesitation.py
bench/: images.lock.yaml  models.lock.yaml
config/: __init__.py  budget.yaml  gates.yaml  loader.py  models.yaml  phase3_strata.yaml  sanity_strata.yaml  substrates.yaml
cost/: __init__.py  ledger.py  watch.py
data/: nvidia_orin_published_benchmarks.json
derating/: __init__.py  op_classes.py  orin_model.py  strix_model.py
docs/: COMPANION-DOCS-CHECKLIST.md  OPERATOR-CHECKLIST-PHASE-01.md  OPERATOR-CHECKLIST-PHASE-02.md  addendum-hardware-pivot-strix-halo-v0_1-2026-04-23.md  addendum-jetson-pivot-v0_1-2026-05-11.md  addendum-receptionbox-discovery-v0_1-2026-04-22.md  addendum-receptionbox-discovery-v0_2-2026-04-22.md  addendum-receptionbox-latency-unconventional-v0_1-2026-05-06.md  receptionbox-technical-feasibility-memo-v0_3-2026-04-23.md  receptionbox-technical-prd-v0_2-2026-05-06.md  receptionbox-virtual-benchmark-plan-v0_1-2026-05-03.md  thumbox-business-prd-v2_1-2026-04-16.md  thumbox-technical-prd-v2_1-2026-04-16.md
gates/: __init__.py  _runner_base.py
harness/: __init__.py  env_fingerprint.py  env_sidecar.py  results.py  store.py
orchestration/: __init__.py  runpod_h100.py  tensorwave_mi300x.py  vultr_mi300x.py
results/: .gitignore
scripts/: build_pod_image.sh  build_pod_image_rocm.sh
substrate/: __init__.py  _stub.py  cuda.py  livekit_pipeline.py  paths.py  rocm.py  types.py
synthesis/: cross_check_nvidia.py  derate_pipeline.py  ingest_gate_jsonls.py  render_methodology.py
tests/: conftest.py  test_asset_manifest_hook.py  test_assets_manifest.py  test_audio_corpora_manifest.py  test_audit_01_runner.py  test_audit_03_runner.py  test_audit_harness_health.py  test_audit_pod_state.py  test_cache_bootstrap.py  test_companion_docs_present.py  test_config_loader.py  test_cost_ledger.py  test_cost_watch_adapters.py  test_cuda_substrate.py  test_derate_pipeline.py  test_dialogue_templates.py  test_dr31_policy.py  test_env_sidecar.py  test_g3_threshold_sweep.py  test_g5_xgrammar.py  test_g711_pipeline.py  test_g7_runner.py  test_gate_runners.py  test_harness_isolation.py  test_harness_results.py  test_ingest_sqlite.py  test_livekit_pipeline.py  test_lockfiles.py  test_orchestration_skeletons.py  test_orin_derate.py  test_phase3_config.py  test_pod_entrypoint.py  test_reference_prompt.py  test_resolve_lockfile_shas.py  test_rocm_substrate.py  test_run_03_02.py  test_run_03_03.py  test_run_03_05.py  test_run_preflight.py  test_run_preflight_e2e.py  (+9 more)
tools/: __init__.py  audit_harness_health.py  audit_pod_state.py  build_strata.py  cache_bootstrap.py  check_asset_manifest.py  fetch_models.py  fetch_results.py  find_runpod_volume.py  pod_entrypoint.sh  poll_runpod_mi300x.py  probe_runpod_dc.py  probe_runpod_stock.py  resolve_lockfile_shas.py  rsync_results.sh  run_03_02.py  run_03_03.py  run_03_05.py  run_preflight.py
(+164 files in other folders)
