[project]
name = "rbox"
version = "0.1.0"
description = "receptionBOX Phase 0 — Cloud Benchmark Validation harness"
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "huggingface-hub>=0.25",
    "jiwer>=4.0,<5.0",
    "whisper-normalizer>=0.0.10",
    "jinja2>=3.1",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.13",
    "pyloudnorm>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pre-commit>=4.0",
    "mypy>=1.10",
    "types-pyyaml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"derating/tests/*" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
