[project]
name = "rbox"
version = "0.1.0"
description = "receptionBOX Phase 0 — Cloud Benchmark Validation harness"
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "huggingface-hub>=0.25",
    "jiwer>=4.0,<5.0",
    "whisper-normalizer>=0.0.10",
    "jinja2>=3.1",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.13",
    "pyloudnorm>=0.1",
    "soundfile>=0.12",
    "runpod>=1.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pre-commit>=4.0",
    "mypy>=1.10",
    "types-pyyaml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"derating/tests/*" = ["S"]
# Hand-curated dialogue utterance literals (Plan 04 / D-01); long natural-language
# strings cannot be reflowed without changing semantics. S311 is benign here --
# random.Random(seed) is for deterministic dialogue ordering, not security.
"assets/scripts/templates.py" = ["E501", "S311"]
# Asset-rendering scripts run inside the separate render_env venv; we lint them
# with the harness ruff but accept long literal hesitation utterances and
# subprocess/random usage analogous to the rules already applied to assets/g711.py.
"assets/render_env/*.py" = ["E501", "S311", "S603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# NOTE: assets/render_env is intentionally NOT a uv workspace member.
# Pitfall 1 (RESEARCH.md) requires the asset-rendering venv (torch <=2.5,
# kokoro, sm_61 GTX 1070 wheel) to be fully isolated from the harness venv
# so deps cannot leak across. render_env carries its own pyproject.toml +
# uv.lock + .venv/ and is operated from inside that directory.
